[package]
name = "did-doge"
version = "0.1.0"
authors = ["The Spruce Systems, Inc. Developers"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoin = "0.26.0"
hex = "0.4.2"
secp256k1 = "0.20.1"
bitcoin_hashes = "0.9.4"
